added simple registration
