# pkg/restapi/operations/register/register_responses.go
@@ -1,0 +1,82 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package register
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "trade-shop/pkg/models"
+)
+
+// RegisterOKCode is the HTTP code returned for type RegisterOK
+const RegisterOKCode int = 200
+
+/*RegisterOK OK
+
+swagger:response registerOK
+*/
+type RegisterOK struct {
+}
+
+// NewRegisterOK creates RegisterOK with default headers values
+func NewRegisterOK() *RegisterOK {
+
+	return &RegisterOK{}
+}
+
+// WriteResponse to the client
+func (o *RegisterOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(200)
+}
+
+// RegisterBadRequestCode is the HTTP code returned for type RegisterBadRequest
+const RegisterBadRequestCode int = 400
+
+/*RegisterBadRequest Логическая ошибка
+
+swagger:response registerBadRequest
+*/
+type RegisterBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ErrorResult `json:"body,omitempty"`
+}
+
+// NewRegisterBadRequest creates RegisterBadRequest with default headers values
+func NewRegisterBadRequest() *RegisterBadRequest {
+
+	return &RegisterBadRequest{}
+}
+
+// WithPayload adds the payload to the register bad request response
+func (o *RegisterBadRequest) WithPayload(payload *models.ErrorResult) *RegisterBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the register bad request response
+func (o *RegisterBadRequest) SetPayload(payload *models.ErrorResult) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *RegisterBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
