# tmp/swagger.yaml
@@ -126,6 +126,51 @@
         }
       }
     },
+    "/user": {
+      "post": {
+        "description": "Регистрация нового пользователя",
+        "tags": [
+          "register"
+        ],
+        "operationId": "register",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "description": "Информация о новом пользователе",
+              "type": "object",
+              "properties": {
+                "email": {
+                  "type": "string",
+                  "x-insullable": false
+                },
+                "password": {
+                  "type": "string",
+                  "x-insullable": false
+                }
+              },
+              "example": {
+                "email": "speaker@mail.com",
+                "password": "123456"
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Логическая ошибка",
+            "schema": {
+              "$ref": "#/definitions/errorResult"
+            }
+          }
+        }
+      }
+    },
     "/user/inventory": {
       "get": {
         "description": "User inventory",
